<?xml version="1.0" encoding="utf-8"?>

    <!-- res/layout/onboard_screen_2.xml -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main"
        android:orientation="vertical"
        android:background="@color/backgroundclr"
        android:gravity="center"
        android:padding="24dp"
        tools:context=".Onboard2">

        <ImageView
            android:id="@+id/onboardingImage2"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="24dp"
            android:scaleType="fitCenter"
            android:src="@drawable/onnboard_image_2" />

        <TextView
            android:id="@+id/onboardingTitle2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/onboarding_title_2"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onboardingDesc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/onboarding_desc_2"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="16sp" />

        <!-- Next Button -->
        <Button
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/accent"
            android:onClick="Next"
            android:padding="12dp"
            android:text="@string/next_button_text"
            android:textColor="@color/white" />

    </LinearLayout>