<?xml version="1.0" encoding="utf-8"?>

    <!-- res/layout/onboard_screen_3.xml -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main"
        android:orientation="vertical"
        android:background="@color/backgroundclr"
        android:gravity="center"
        android:padding="24dp"
        tools:context=".Onboard3">

        <ImageView
            android:id="@+id/onboardingImage3"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="32dp"
            android:scaleType="fitCenter"
            android:src="@drawable/onboard_image_3" />

        <TextView
            android:id="@+id/onboardingTitle3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="12dp"
            android:text="@string/onboarding_title_3"
            android:textColor="@color/text_primary"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/onboardingDesc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/onboarding_desc_3"
            android:textAlignment="center"
            android:textColor="@color/text_secondary"
            android:textSize="18sp" />

        <!-- Get Started Button -->
        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="54dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_button"
            android:backgroundTint="@color/accent"
            android:onClick="Getstart"
            android:padding="12dp"
            android:text="@string/get_started_button_text"
            android:textColor="@color/white" />

    </LinearLayout>
